--- a/Front_End/pages/customer.html
+++ b/Front_End/pages/customer.html
@@ -37,8 +37,9 @@
         </div>
     </nav>
 </header>
-<body class="bg-primary-subtle">
-<main id="customerContent" class="tab-contents bg-primary-subtle p-5">
+<body style="background-color:#f8f9fa ">
+<!--bg-primary-subtle-->
+<main id="customerContent" class="tab-contents  p-5">
     <section class="row">
         <h1 class="text-primary text-center">Customer Manage</h1>
         <div class="col-12 col-lg-4">
