--- a/Front_End/pages/index.html
+++ b/Front_End/pages/index.html
@@ -60,38 +60,40 @@
   </nav>
 </header>
 <body>
+<main id="dashboardContent">
+  <div class="jumbotron text-center">
+    <h1 style="color: #2b2f32;font-weight: bold">Welcome to Our Shop</h1>
+    <p style="color: #0d6efd">Discover Amazing Items and Deals</p>
+    <a href="#" class="btn btn-primary btn-lg">Explore</a>
+  </div>
 
-<div class="jumbotron text-center">
-  <h1 style="color: #2b2f32;font-weight: bold">Welcome to Our Shop</h1>
-  <p style="color: #0d6efd">Discover Amazing Items and Deals</p>
-  <a href="#" class="btn btn-primary btn-lg">Explore</a>
-</div>
-
-<div class="container" id="features">
-  <div class="row">
-    <div class="col-md-4">
-      <div class="feature-box">
-        <span class="feature-icon">&#127757;</span>
-        <h2>WorldWide Products</h2>
-        <p>Explore our vast collection of items, from electronics to fashion.</p>
+  <div class="container" id="features">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="feature-box">
+          <span class="feature-icon">&#127757;</span>
+          <h2>WorldWide Products</h2>
+          <p>Explore our vast collection of items, from electronics to fashion.</p>
+        </div>
       </div>
-    </div>
-    <div class="col-md-4">
-      <div class="feature-box">
-        <span class="feature-icon">&#127942;</span>
-        <h2>Quality Guaranteed</h2>
-        <p>We ensure that all our products meet high quality standards.</p>
+      <div class="col-md-4">
+        <div class="feature-box">
+          <span class="feature-icon">&#127942;</span>
+          <h2>Quality Guaranteed</h2>
+          <p>We ensure that all our products meet high quality standards.</p>
+        </div>
       </div>
-    </div>
-    <div class="col-md-4">
-      <div class="feature-box">
-        <span class="feature-icon">&#128176;</span>
-        <h2>Secure Shopping</h2>
-        <p>Your information is safe with us. Shop with confidence.</p>
+      <div class="col-md-4">
+        <div class="feature-box">
+          <span class="feature-icon">&#128176;</span>
+          <h2>Secure Shopping</h2>
+          <p>Your information is safe with us. Shop with confidence.</p>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</main>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
