--- a/Front_End/pages/purchase-order.html
+++ b/Front_End/pages/purchase-order.html
@@ -37,8 +37,8 @@
         </div>
     </nav>
 </header>
-<body>
-<main id="placeOrder-section" class="tab-contents bg-primary-subtle p-3">
+<body style="background-color:#f8f9fa ">
+<main id="placeOrder-section" class="tab-contents  p-3">
     <h2 class="text-primary  text-center pt-12 m-lg-2">Place Order</h2>
     <section class="col border-dark m-3 border rounded object-fit-contain">
         <form class="row g-3">
