--- a/Front_End/pages/item.html
+++ b/Front_End/pages/item.html
@@ -37,8 +37,8 @@
         </div>
     </nav>
 </header>
-<body class="bg-primary-subtle">
-<main id="itemContent" class="tab-contents bg-primary-subtle p-5">
+<body style="background-color:#f8f9fa ">
+<main id="itemContent" class="tab-contents  p-5">
     <section class="row">
         <h1 class="text-primary text-center">Item Manage</h1>
         <div class="col-12 col-lg-4">
