--- a/Front_End/pages/customer.html
+++ b/Front_End/pages/customer.html
@@ -3,85 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <title>Customer Manage</title>
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
-    <script src="../assets/js/jquery-3.7.0.min.js"></script>
+    <meta content="width=device-width initial-scale=1" name="viewport">
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../assets/css/styles.css" rel="stylesheet">
+    <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+          integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" rel="stylesheet">
+    <style>
+        ul > li {
+            cursor: pointer;
+        }
+    </style>
 </head>
-<header>
-    <nav class="navbar navbar-expand-lg " data-bs-theme="dark" style="background-color: #0a58ca">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Pos System</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse ms-4" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a id="lnkCustomer" class="nav-link text-white" aria-current="page" href="customer.html">Customer</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="lnkItem" class="nav-link text-white" href="item.html">Items</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="lnkPlaceOrder" class="nav-link text-white" href="purchase-order.html">Place Orders</a>
-                    </li>
+<body>
 
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
-                           style="background-color: white; color: black;">
-                    <button class="btn btn-outline-light" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
-    </nav>
+<!--header-->
+<header class="jumbotron bg-primary text-white p-3">
+    <h1 class="position-absolute" id="nav"></h1>
+    <ul class="list-group list-group-horizontal text-danger justify-content-end font-weight-bold">
+        <li class="list-group-item bg-white" id="lnkHome"><a href="../index.html">Home</a></li>
+        <li class="list-group-item bg-danger text-white" id="lnkCustomer"><a class="text-white"
+                                                                             href="customer.html">Customer</a>
+        </li>
+        <li class="list-group-item bg-white" id="lnkItem"><a href="item.html">Item</a></li>
+        <li class="list-group-item bg-white" id="lnkOrders"><a href="purchase-order.html">Orders</a></li>
+    </ul>
 </header>
-<body style="background-color:#f8f9fa ">
-<!--bg-primary-subtle-->
-<main id="customerContent" class="tab-contents  p-5">
-    <section class="row">
-        <h1 class="text-primary text-center">Customer Manage</h1>
-        <div class="col-12 col-lg-4">
 
+<!--customer content-->
+<main class="container-fluid" id="customerContent">
+    <section class="row">
+        <div class="col-12 col-lg-4">
+            <h1>Customer Registration</h1>
             <form id="customerForm">
-                <div class="form-group m-3">
+                <div class="form-group">
                     <label for="txtCustomerID">Customer ID</label>
                     <input name="cusID" class="form-control" id="txtCustomerID" type="text">
                     <span class="control-error" id="lblcusid"></span>
                 </div>
-                <div class="form-group m-3">
+                <div class="form-group">
                     <label for="txtCustomerName">Customer Name</label>
                     <input name="cusName" class="form-control" id="txtCustomerName" type="text">
                     <span class="control-error" id="lblcusname"></span>
                 </div>
-                <div class="form-group m-3">
+                <div class="form-group">
                     <label for="txtCustomerAddress">Customer Address</label>
                     <input name="cusAddress" class="form-control" id="txtCustomerAddress" type="text">
                     <span class="control-error" id="lblcusaddress"></span>
                 </div>
-                <div class="form-group m-3">
+                <div class="form-group">
                     <label for="txtCustomerSalary">Customer Salary</label>
                     <input name="cusSalary" class="form-control" id="txtCustomerSalary" type="text">
                     <span class="control-error" id="lblcussalary"></span>
                 </div>
-                <div class="btn-group m-3">
-                    <button type="button" class="btn btn-primary" id="btnCustomer">Save</button>
-                    <button type="button" class="btn btn-warning" id="btnUpdate">Update</button>
-                    <button type="button" class="btn btn-danger" id="btnCusDelete">Remove</button>
+                <div class="btn-group">
+                    <button type="button" class="btn btn-primary" id="btnCustomer">
+                        Save Customer
+                    </button>
+                    <button type="button" class="btn btn-danger"
+                            id="btnCusDelete">Remove
+                    </button>
+                    <button type="button" class="btn btn-warning"
+                            id="btnUpdate">Update
+                    </button>
                     <button type="button" class="btn btn-success" id="btnGetAll">Get All</button>
-                    <button type="button" class="btn btn-secondary" id="btn-clear1">Clear All</button>
+                    <button type="button" class="btn btn-danger" id="btn-clear1">Clear All</button>
                 </div>
             </form>
         </div>
         <div class="col-12 col-lg-8 mt-3">
             <table class="table table-bordered table-hover">
-                <thead class="bg-primary text-white">
+                <thead class="bg-danger text-white">
                 <tr>
                     <th>Customer ID</th>
                     <th>Customer Name</th>
                     <th>Customer Address</th>
-                    <th>Customer Salary</th>
                 </tr>
                 </thead>
                 <tbody id="tblCustomer">
@@ -89,7 +84,112 @@
                 </tbody>
             </table>
         </div>
-        </section>
+    </section>
 </main>
+
+
+<script src="../assets/js/jquery-3.6.1.min.js"></script>
+<script src="../assets/js/bootstrap.min.js"></script>
+
+
+<!--bind a event on btn GetAll btn-->
+<script>
+    const BASE_URL="http://localhost:8080/jsonp/pages/";
+
+    getAllCustomers();
+
+    //get all customer function
+    $("#btnGetAll").click(function () {
+        getAllCustomers();
+    });
+
+    // get all customers
+    function getAllCustomers() {
+        $("#tblCustomer").empty();
+        <!--send ajax request to the customer servlet using jQuery-->
+        $.ajax({
+            url: BASE_URL+'customer',
+            dataType: "json",
+            success: function (response) {
+                let customers = response.data;
+                for (let i in customers) {
+                    let cus = customers[i];
+                    let id = cus.id;
+                    let name = cus.name;
+                    let address = cus.address;
+                    let row = `<tr><td>${id}</td><td>${name}</td><td>${address}</td></tr>`;
+                    $("#tblCustomer").append(row);
+                }
+            },
+            error: function (error) {
+                alert(error.responseJSON.message);
+            }
+        });
+    }
+
+    // save customer function
+    $("#btnCustomer").click(function () {
+        let formData = $("#customerForm").serialize();
+        $.ajax({
+            url: BASE_URL+"customer",
+            method: "post",
+            data: formData,
+            success: function (res) {
+                alert(res.message);
+                getAllCustomers();
+            },
+            error: function (error) {
+                alert(error.responseJSON.message);
+            }
+        });
+    });
+
+    //delete customer function
+    $("#btnCusDelete").click(function () {
+        let id = $("#txtCustomerID").val();
+        $.ajax({
+            url: BASE_URL+'customer?cusID=' + id,
+            method: 'delete',
+            success: function (resp) {
+                alert(resp.message);
+                getAllCustomers();
+            },
+            error: function (error) {
+                alert(error.responseJSON.message);
+            }
+        });
+    });
+
+    //update customer function
+    $("#btnUpdate").click(function () {
+        let id = $("#txtCustomerID").val();
+        let name = $("#txtCustomerName").val();
+        let address = $("#txtCustomerAddress").val();
+        let salary = $("#txtCustomerSalary").val();
+
+        //json object
+        let object = {
+            "cusID": id,
+            "cusName": name,
+            "cusAddress": address,
+            "cusSalary": salary
+        }
+
+        $.ajax({
+            url: BASE_URL+'customer',
+            method: 'put',
+            contentType: "application/json",
+            data: JSON.stringify(object),
+            success: function (resp) {
+                alert(resp.message);
+                getAllCustomers();
+            },
+            error: function (error) {
+                alert(error.responseJSON.message);
+            }
+        });
+    });
+</script>
+
 </body>
 </html>
