--- a/Front_End/pages/item.html
+++ b/Front_End/pages/item.html
@@ -3,78 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <title>Item Manage</title>
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
-    <script src="../assets/js/jquery-3.7.0.min.js"></script>
+    <meta content="width=device-width initial-scale=1" name="viewport">
+    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../assets/css/styles.css" rel="stylesheet">
+    <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+          integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" rel="stylesheet">
+    <style>
+        ul > li {
+            cursor: pointer;
+        }
+    </style>
 </head>
-<header>
-    <nav class="navbar navbar-expand-lg " data-bs-theme="dark" style="background-color: #0a58ca">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Pos System</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse ms-4" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a id="lnkCustomer" class="nav-link text-white" aria-current="page" href="customer.html">Customer</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="lnkItem" class="nav-link text-white" href="item.html">Items</a>
-                    </li>
-                    <li class="nav-item">
-                        <a id="lnkPlaceOrder" class="nav-link text-white" href="purchase-order.html">Place Orders</a>
-                    </li>
-
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
-                           style="background-color: white; color: black;">
-                    <button class="btn btn-outline-light" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
-    </nav>
+<body>
+<!--header-->
+<header class="jumbotron bg-primary text-white p-3">
+    <h1 class="position-absolute" id="nav"></h1>
+    <ul class="list-group list-group-horizontal text-danger justify-content-end font-weight-bold">
+        <li class="list-group-item bg-white" id="lnkHome"><a href="../index.html">Home</a></li>
+        <li class="list-group-item bg-white" id="lnkCustomer"><a href="customer.html">Customer</a></li>
+        <li class="list-group-item bg-danger text-white" id="lnkItem"><a class="text-white" href="item.jsp">Item</a>
+        </li>
+        <li class="list-group-item bg-white" id="lnkOrders"><a href="purchase-order.html">Orders</a></li>
+    </ul>
 </header>
-<body style="background-color:#f8f9fa ">
-<main id="itemContent" class="tab-contents  p-5">
+
+<!--item content-->
+<main class="container-fluid" id="itemContent">
     <section class="row">
-        <h1 class="text-primary text-center">Item Manage</h1>
         <div class="col-12 col-lg-4">
+            <h1>Item Form</h1>
             <form id="itemForm">
-                <div class="form-group m-3">
-                    <label for="itemCode">Item Code</label>
-                    <input name="code" class="form-control" id="itemCode" type="text">
-                    <span class="control-error" id="lblCode"></span>
-                </div>
-                <div class="form-group m-3">
-                    <label for="itemName">Item Name</label>
-                    <input name="description" class="form-control" id="itemName" type="text">
-                    <span class="control-error" id="lblname"></span>
-                </div>
-                <div class="form-group m-3">
-                    <label for="itemQty">Item Qty</label>
-                    <input name="qty" class="form-control" id="itemQty" type="text">
-                    <span class="control-error" id="lblqty"></span>
-                </div>
-                <div class="form-group m-3">
-                    <label for="itemPrice">Unit Price</label>
-                    <input name="unitPrice" class="form-control" id="itemPrice" type="text">
-                    <span class="control-error" id="lblprice"></span>
-                </div>
-                <div class="btn-group">
-                    <button type="button"  class="btn btn-primary"   id="btnItem">Add Item</button>
-                    <button type="button"  class="btn btn-warning"   id="btnItemUpdate">Update</button>
-                    <button type="button"  class="btn btn-danger"    id="btnItemDelete">Remove</button>
-                    <button type="button"  class="btn btn-success"   id="btnItemGetAll">Get All</button>
-                    <button type="button"  class="btn btn-secondary" id="btn-clear">Clear All</button>
-                </div>
+            <div class="form-group">
+                <label for="itemCode">Item Code</label>
+                <input name="code" class="form-control" id="itemCode" type="text">
+                <span class="control-error" id="lblCode"></span>
+            </div>
+            <div class="form-group">
+                <label for="itemName">Item Name</label>
+                <input name="description" class="form-control" id="itemName" type="text">
+                <span class="control-error" id="lblname"></span>
+            </div>
+            <div class="form-group">
+                <label for="itemQty">Item Qty</label>
+                <input name="qty" class="form-control" id="itemQty" type="text">
+                <span class="control-error" id="lblqty"></span>
+            </div>
+            <div class="form-group">
+                <label for="itemPrice">Unit Price</label>
+                <input name="unitPrice" class="form-control" id="itemPrice" type="text">
+                <span class="control-error" id="lblprice"></span>
+            </div>
             </form>
+            <div class="btn-group">
+                <button form="itemForm" formmethod="post"  formaction="item?option=add" class="btn btn-primary" id="btnItem">Add Item</button>
+                <button form="itemForm" formmethod="post"  formaction="item?option=delete" class="btn btn-danger" id="btnItemDelete">Remove</button>
+                <button form="itemForm" formmethod="post"  formaction="item?option=update" class="btn btn-warning" id="btnItemUpdate">Update</button>
+                <button form="itemForm" formaction="item" class="btn btn-success">Get All</button>
+                <button form="itemForm" type="reset" class="btn btn-danger" id="btn-clear">Clear All</button>
+            </div>
+
         </div>
         <div class="col-12 col-lg-8 mt-3">
             <table class="table table-bordered table-hover">
-                <thead class="bg-primary text-white">
+                <thead class="bg-danger text-white">
                 <tr>
                     <th>Item Code</th>
                     <th>Item Name</th>
@@ -84,11 +75,13 @@
                 </thead>
                 <tbody id="tblItem">
 
+
                 </tbody>
             </table>
-
         </div>
     </section>
+
 </main>
+
 </body>
 </html>
